--- a/app/src/main/res/layout/view_home_tips.xml
+++ b/app/src/main/res/layout/view_home_tips.xml
@@ -6,14 +6,14 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <com.wavehk.android.app.common.view.WImageView
+    <com.simga.library.activity.BaseImageView
         android:id="@+id/item_home_tips_icon"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@mipmap/load_image_default"
         app:roundAsCircle="true" />
 
-    <com.king.android.view.BabushkaText
+    <com.kinglyl.android.view.BabushkaText
         android:id="@+id/item_home_tips_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
